reading and displaying certificate of the receiver