@@ -11,6 +11,13 @@ dependencies {
     fun klite(module: String) = "com.github.keksworks.klite:klite-$module:1.7.2"
     implementation(klite("server"))
     implementation(klite("slf4j"))
+
+    testImplementation("org.junit.jupiter:junit-jupiter:5.13.4")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.13.4")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.13.4")
+    testImplementation("ch.tutteli.atrium:atrium-fluent:1.3.0-alpha-2")
+    testImplementation("io.mockk:mockk:1.14.6")
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.9.0")
 }
 
 kotlin {
@@ -29,7 +36,9 @@ sourceSets {
 }
 
 tasks.test {
+    workingDir(rootDir)
     useJUnitPlatform()
+    jvmArgs("-DENV=test", "--add-opens=java.base/java.lang=ALL-UNNAMED", "-XX:-OmitStackTraceInFastThrow")
 }
 
 tasks.register<Copy>("deps") {
